# bopku

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
bopku/: __main__.py  config.py  db.py  store.py
bopku/alembic/: README  env.py
bopku/alembic/versions/: 2020_12_29_51347face28e_change_sekolah.py  2020_12_29_9f0e09fbedff_add_pesertadidik.py
bopku/migrations/: env.py
bopku/models/: __init__.py  peserta_didik.py  sekolah.py
docs/: alembic.md  index.html
tests/: test_bopku.py
